--- a/component/docs.html
+++ b/component/docs.html
@@ -31,7 +31,7 @@
             <div class="d-flex align-items-center me-auto">
                 <img src="/assets/QbitrixDatalensLogo.png" class="brand-logo me-2" alt="Logo"
                     onerror="this.style.display='none'" />
-                <div class="lh-1">
+                <div class="lh-1 mobile">
                     <div class="fw-bold fs-5" style="letter-spacing: -0.5px;">QBITRIX <span
                             class="text-primary">DataLens</span>
                     </div>
